--- a/src/admin/admin.html
+++ b/src/admin/admin.html
@@ -24,17 +24,17 @@
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Create Class</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
+        <form onsubmit="createClass(); return false">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Create Class</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
 
-          <form onsubmit="createClass(); return false">
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">Select Class Timings</label>
-              <select class="form-control" name="timing" id="timing">
-                <option value="09:00 AM - 11:00 PM">09:00 AM - 11:00 PM</option>
+              <select class="form-control" required name="timing" id="timing">
+                <option value="09:00 AM - 11:00 PM">09:00 AM - 11:00 AM</option>
                 <option value="11:00 AM - 01:00 PM">11:00 AM - 01:00 PM</option>
                 <option value="09:00 PM - 11:00 PM">09:00 PM - 11:00 PM</option>
                 <option value="06:00 PM - 08:00 PM">06:00 PM - 08:00 PM</option>
@@ -42,7 +42,7 @@
             </div>
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">Select Class Schedule</label>
-              <select class="form-control" name="schedule" id="class">
+              <select class="form-control" required name="schedule" id="class">
                 <option value="Monday - Wednesday - Friday">Monday - Wednesday - Friday</option>
                 <option value="Tuesday - Thursday - Saturday">Tuesday - Thursday - Saturday</option>
                 <option value="Saturday - Sunday">Saturday - Sunday</option>
@@ -50,7 +50,7 @@
             </div>
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">Select Teacher's name</label>
-              <select class="form-control" name="schedule" id="teacher">
+              <select class="form-control" required name="schedule" id="teacher">
                 <option value="Rizwan">Sir Rizwan Jamal</option>
                 <option value="Kashif">Sir Kashif Sulaiman</option>
                 <option value="Haider">Sir Haider Ali</option>
@@ -61,7 +61,7 @@
 
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">Select Section Name</label>
-              <select class="form-control" name="schedule" id="section">
+              <select class="form-control" required name="schedule" id="section">
                 <option value="A">A</option>
                 <option value="B">B</option>
                 <option value="C">C</option>
@@ -71,7 +71,7 @@
 
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">Select Course Name</label>
-              <select class="form-control" name="schedule" id="course">
+              <select class="form-control" required name="schedule" id="course">
                 <option value="Web and Mobile Application Development">Web and Mobile Application Development</option>
                 <option value="Graphic Designing">Graphic Designing</option>
                 <option value="Ai and ChatBot">Ai and ChatBot</option>
@@ -80,23 +80,95 @@
 
             <div class="mb-3">
               <label for="exampleFormControlInput1" class="form-label">Select Batch Number</label>
-              <input type="number" class="form-control" name="" id="batch">
+              <input type="number" required class="form-control" name="" id="batch">
             </div>
-          </form>
 
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Create Class</button>
-        </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="submit button" class="btn btn-primary">Create Class</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
 
 
 
+  <!-- Register Student -->
 
 
+
+
+
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+    Register Student
+  </button>
+
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModal2Label" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <form onsubmit="registerStudent(); return false">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">Create Class</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Enter Student Name</label>
+              <input type="text" class="form-control" name="" id="name">
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Enter Father's Name</label>
+              <input type="text" name="" class="form-control" id="father-name">
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Enter Roll No</label>
+              <input type="number" name="" class="form-control" id="roll-no">
+            </div>
+
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Enter Phone Number</label>
+              <input type="number" name="" class="form-control" id="phone-no">
+            </div>
+
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Enter CNIC Number</label>
+              <input type="number" max="13" name="" class="form-control" id="cnic-no">
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Upload Image</label>
+              <input type="file" name="" class="form-control" id="image" />
+            </div>
+
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Select Course Name</label>
+              <select class="form-control" required name="course" id="course">
+                <option value="Web and Mobile Application Development">Web and Mobile Application Development</option>
+                <option value="Graphic Designing">Graphic Designing</option>
+                <option value="Ai and ChatBot">Ai and ChatBot</option>
+              </select>
+            </div>
+
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">Select Class </label>
+              <select class="form-control" required name="class" id="class">
+                
+              </select>
+            </div>
+
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="submit button" class="btn btn-primary">Register Student</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
