--- a/index.html
+++ b/index.html
@@ -1,26 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Application System</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-  
-</head>
-<body>
-    <h1>
-        <form onsubmit="signIn(); return false">
-            <input type="email" id="email" placeholder="enter Email"/>
-            <input type="text" name="" id="password" placeholder="Enter Password">
-            <button type="submit">Sign In</button>
-        </form>
-    </h1>
-    
-    <span id="error"></span>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+</head>
+
+<body>
+
+    <div class="container-fluid text-center">
+        <div class="row">
+            <div class="col col-one">
+                <img src="https://www.saylaniwelfare.com/static/media/logo_saylaniwelfare.22bf709605809177256c.png"
+                    alt="">
+            </div>
+            <div class="col col-two">
+                <img class="image" src="https://www.w3schools.com/howto/img_avatar.png" alt="">
+                <h1>welcome</h1>
+                <form onsubmit="signIn(); return false">
+                    <input class="form-control" type="email" required id="email" placeholder="Email" />
+                    <input class="form-control" type="text" required name="" id="password" placeholder="Password" />
+                    <button type="button submit" class="btn btn-primary">Sign In</button>
+                </form>
+            </div>
+        </div>
+
+        <span id="error">
+            
+        </span>
+
+
+    </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
     <script type="module" src="./config/firebase.js"></script>
     <script type="module" src="/app.js"></script>
 </body>
+
 </html>
