getting students data

--- a/src/classes/classes.html
+++ b/src/classes/classes.html
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ">
           <a class="nav-link" href="/src/admin/admin.html">Home</a>
-          <a class="nav-link" href="#">Classes</a>
+          <a class="nav-link active" href="#">Classes</a>
           <a class="nav-link" href="../students/students.html">Student</a>
           <a class="nav-link" href="./">Attendance</a>
           <a class="nav-link disabled">Admin <img src="" alt=""></a>
@@ -118,7 +118,7 @@
     </div>
 
     <h2>All Classes</h2>
-    <div id="show-classes">
+    <div id="show-students">
 
     </div>
   </div>
