--- a/src/admin/admin.html
+++ b/src/admin/admin.html
@@ -20,7 +20,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ">
-          <a class="nav-link" href="/src/admin/admin.html">Home</a>
+          <a class="nav-link active" href="/src/admin/admin.html">Home</a>
           <a class="nav-link" href="../classes/classes.html">Classes</a>
           <a class="nav-link" href="../students/students.html">Student</a>
           <a class="nav-link" href="../attendance/attendance.html">Attendance</a>
@@ -41,74 +41,7 @@
 
 
 
-  <!-- Button trigger modal -->
-  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal2">
-    Register Student
-  </button>
-
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModal2Label" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <form onsubmit="registerStudent(); return false">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalLabel">Create Class</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Enter Student Name</label>
-              <input type="text" class="form-control" name="" id="name">
-            </div>
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Enter Father's Name</label>
-              <input type="text" name="" class="form-control" id="father-name">
-            </div>
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Enter Roll No</label>
-              <input type="number" name="" class="form-control" id="roll-no">
-            </div>
-
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Enter Phone Number</label>
-              <input type="number" name="" class="form-control" id="phone-no">
-            </div>
-
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Enter CNIC Number</label>
-              <input type="number" name="" class="form-control" id="cnic-no">
-            </div>
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Upload Image</label>
-              <input type="file" name="" class="form-control" id="image" />
-            </div>
-
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Select Course Name</label>
-              <select class="form-control" required name="student-course" id="student-course">
-                <option value="Web and Mobile Application Development">Web and Mobile Application Development</option>
-                <option value="Graphic Designing">Graphic Designing</option>
-                <option value="Ai and ChatBot">Ai and ChatBot</option>
-              </select>
-            </div>
-
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Select Class </label>
-              <select class="form-control"  name="class" id="classes">
-                
-              </select>
-            </div>
-
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="submit button" class="btn btn-primary">Register Student</button>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
+  
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
