--- a/src/students/students.html
+++ b/src/students/students.html
@@ -1,13 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Students</title>
+    <link rel="stylesheet" href="students.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
 </head>
+
 <body>
-    <h1>Students</h1>
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"><img width="70"
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSm_oi96iDOT2Hox5ndEo9HKGjQkkKXP_Om9ngMEU-0XQ&s"
+                    alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ">
+                    <a class="nav-link" href="/src/admin/admin.html">Home</a>
+                    <a class="nav-link" href="/src/classes/classes.html">Classes</a>
+                    <a class="nav-link active" href="#">Student</a>
+                    <a class="nav-link" href="src/attendance/attendance.html">Attendance</a>
+
+                    <a class="nav-link disabled">Admin <img src="" alt=""></a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container">
+
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary register-student" data-bs-toggle="modal"
+            data-bs-target="#exampleModal2">
+            Register Student
+        </button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModal2Label"
+            aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <form onsubmit="registerStudent(); return false">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">Create Class</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+
+                            <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Enter Student Name</label>
+                                <input type="text" class="form-control" name="" id="name">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Enter Father's Name</label>
+                                <input type="text" name="" class="form-control" id="father-name">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Enter Roll No</label>
+                                <input type="number" name="" class="form-control" id="roll-no">
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Enter Phone Number</label>
+                                <input type="number" name="" class="form-control" id="phone-no">
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Enter CNIC Number</label>
+                                <input type="number" name="" class="form-control" id="cnic-no">
+                            </div>
+                            <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Upload Image</label>
+                                <input type="file" name="" class="form-control" id="image" />
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Select Course Name</label>
+                                <select class="form-control" required name="student-course" id="student-course">
+                                    <option value="Web and Mobile Application Development">Web and Mobile Application
+                                        Development</option>
+                                    <option value="Graphic Designing">Graphic Designing</option>
+                                    <option value="Ai and ChatBot">Ai and ChatBot</option>
+                                </select>
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Select Class </label>
+                                <select class="form-control" name="class" id="classes">
+
+                                </select>
+                            </div>
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="submit button" class="btn btn-primary">Register Student</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    
+        <div id="show-students">
+            
+        </div>
+    </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+
+    <script type="module" src="students.js"></script>
+    <script type="module" src="../../config/firebase.js"></script>
 
 </body>
+
 </html>
